--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 </div>
 </div>
 
-    <div class="container-sm m-5 text-center">
+    <div class="container-sm text-center mt-5 mb-3">
         <b>Note :-</b> As the app is made for certain authorized users only. You can have a view on its tech stack and UI, 
         though !! :)
     </div>
 
-      <div class="container m-5 p-5">
-        <div class="container-sm m-3">
+      <div class="container">
+        <div class="container-sm mt-5 mb-3">
            1) After landing page, there is login page for authorized users (Faculty).
         </div>
         <img
@@ -121,8 +121,8 @@
         />
       </div>
 
-      <div class="container-sm m-5 p-5">
-        <div class="container-sm m-4">
+      <div class="container-sm">
+        <div class="container-sm mt-5 mb-3">
            2) After logining into the app, users will be having a Dashboard with some stats in blocks with there name, change password
            and logout buttons and top. Also, the sidebar on left.
         </div>
@@ -133,8 +133,8 @@
         />
       </div>
 
-      <div class="container-sm m-5 p-5">
-        <div class="container-sm m-3">
+      <div class="container-sm">
+        <div class="container-sm mt-5 mb-3">
            3) Student table with data of all students. For more details, user can click on more option icon placed before delete.
        </div>       
         <img
@@ -144,8 +144,8 @@
         />
       </div>
 
-      <div class="container-sm m-5 p-5">
-        <div class="container-sm m-3">
+      <div class="container-sm">
+        <div class="container-sm mt-5 mb-3">
            4) Users table with data of all users. Edit, add and delete associated with searching and sorting among users.
        </div>       
         <img
@@ -155,8 +155,8 @@
         />
       </div>
 
-      <div class="container-sm m-5 p-5">
-        <div class="container-sm m-3">
+      <div class="container-sm">
+        <div class="container-sm mt-5 mb-3">
            5) Creating user / registration is allowed only from inside of the app. 
        </div>       
         <img
@@ -168,11 +168,10 @@
     </div>
 
     
-    <div class="container-sm text-center">
+    <div class="container-sm text-center mt-3 mb-1">
       Thank You for your time  !!
     </div>       
     
-    <i class="fas fa-heart"></i>
-    <p class="font-weight-light text-center m-5">Make with <img src="./images/Heart.svg" alt="Heart" style="height: 15px;"> by <a href="https://www.linkedin.com/in/yashlakade/">Yash Lakade</a></p>         
+    <p class="font-weight-light text-center mt-3 mb-3">Make with <img src="./images/Heart.svg" alt="Heart" style="height: 15px;"> by <a href="https://www.linkedin.com/in/yashlakade/">Yash Lakade</a></p>         
   </body>
 </html>
