--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="container">
         <h1 class="my-4 text-center text-dark font-xl">TNP DB Project</h1>
     
-        <div class="container-fluid" style="margin-top: 80px; margin-bottom: 75px; font-size: 1.2rem;">
+        <div class="container-fluid col-xl-5" style="margin-top: 80px; margin-bottom: 75px; font-size: 1.2rem;">
             <div class="card o-hidden bg-dark">
               <div class="card-body bg-dark">
                 <div class="text-center card-font-size"> 
@@ -46,12 +46,11 @@
             </div>
           </div>
         </div> 
-      </div>   
 
      <div class="container mt-5">
         <h3 class="mb-3">Tech Stack used</h3>
         <div class="row">
-        <div class="m-1 border border-dark col-xl-5 col-sm-12 p-3">
+        <div class="m-1 border border-dark col-xl-6 col-sm-12 p-3">
             <h4 class="text-dark"> Frontend </h4>
             <ul type=none>
                 <li>EJS - Embedded JavaScript</li>
@@ -72,7 +71,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="m-1 border border-dark col-xl-5 col-sm-12 p-3">
+        <div class="m-1 border border-dark col-xl-6 col-sm-12 p-3">
             <h4 class="text-dark"> NPM Packages </h4>
             <ul type=none>
                 <li>Body Parser</li>
@@ -96,13 +95,14 @@
         </div>        
     </div>
   </div>
+</div>   
 
     <div class="container-sm text-center mt-5 mb-3">
         <b>Note :-</b> As the app is made for certain authorized users only. You can have a view on its tech stack and UI, 
         though !! :)
     </div>
 
-      <div class="container">
+      <div class="container col-xl-8">
         <div class="container-sm mt-5 mb-3">
            1) After landing page, there is login page for authorized users (Faculty).
         </div>
@@ -113,7 +113,7 @@
         />
       </div>
 
-      <div class="container-sm">
+      <div class="container-sm col-xl-8">
         <div class="container-sm mt-5 mb-3">
            2) After logining into the app, users will be having a Dashboard with some stats in blocks with there name, change password
            and logout buttons and top. Also, the sidebar on left.
@@ -125,7 +125,7 @@
         />
       </div>
 
-      <div class="container-sm">
+      <div class="container-sm col-xl-8">
         <div class="container-sm mt-5 mb-3">
            3) Student table with data of all students. For more details, user can click on more option icon placed before delete.
        </div>       
@@ -136,7 +136,7 @@
         />
       </div>
 
-      <div class="container-sm">
+      <div class="container-sm col-xl-8">
         <div class="container-sm mt-5 mb-3">
            4) Users table with data of all users. Edit, add and delete associated with searching and sorting among users.
        </div>       
@@ -147,7 +147,7 @@
         />
       </div>
 
-      <div class="container-sm">
+      <div class="container-sm col-xl-8">
         <div class="container-sm mt-5 mb-3">
            5) Creating user / registration is allowed only from inside of the app. 
        </div>       
