--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         though !! :)
     </div>
 
-      <div class="container col-xl-8">
+      <div class="container col-xl-8 col-sm-12">
         <div class="container-sm mt-5 mb-3">
            1) After landing page, there is login page for authorized users (Faculty).
         </div>
@@ -113,7 +113,7 @@
         />
       </div>
 
-      <div class="container-sm col-xl-8">
+      <div class="container-sm col-xl-8 col-sm-12">
         <div class="container-sm mt-5 mb-3">
            2) After logining into the app, users will be having a Dashboard with some stats in blocks with there name, change password
            and logout buttons and top. Also, the sidebar on left.
@@ -125,7 +125,7 @@
         />
       </div>
 
-      <div class="container-sm col-xl-8">
+      <div class="container-sm col-xl-8 col-sm-12">
         <div class="container-sm mt-5 mb-3">
            3) Student table with data of all students. For more details, user can click on more option icon placed before delete.
        </div>       
@@ -136,7 +136,7 @@
         />
       </div>
 
-      <div class="container-sm col-xl-8">
+      <div class="container-sm col-xl-8 col-sm-12">
         <div class="container-sm mt-5 mb-3">
            4) Users table with data of all users. Edit, add and delete associated with searching and sorting among users.
        </div>       
@@ -147,7 +147,7 @@
         />
       </div>
 
-      <div class="container-sm col-xl-8">
+      <div class="container-sm col-xl-8 col-sm-12">
         <div class="container-sm mt-5 mb-3">
            5) Creating user / registration is allowed only from inside of the app. 
        </div>       
